# rust-wasm-gravity

./: .gitignore  .gitmodules  Cargo.toml  index.html  main.wasm
res/: helper.js  main.js
script/: build.bat  build_wasm.sh  release_wasm.bat  release_wasm.sh  runserver.bat
src/: app.rs  body.rs  canvas.rs  console.rs  helper.rs  lib.rs  macros.rs  math.rs  physics.rs
web/: canvas.js  main.js  math.js  style.css
