[package]
name = "wasm-gravity"
version = "0.1.3"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.5", default-features = true }
lazy_static = "1.1.0"
wasm_env = { path = "wasm" }
physsol = { git = "https://github.com/nthend/physsol-rs", rev = "a3828f215c9161a4b375b58ad3f77a05b8aa7816" }
